<resources>
    <string name="app_name">Довідник з гри Відьмак 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Довідник з гри "Відьмак 3"</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="person">Персонажі</string>
    <string name="monster">Монстри</string>
    <string name="animal">Тварини</string>
    <string name="elixir">Еліксири</string>
    <string name="sword">Зброя</string>
    <string name="magic">Магічні знаки</string>
    <string name="about">Про додаток</string>
    <string name="person1"> Істота, укладену в потворною оболонці Уми, виявилося Аваллакхом - могутнім Обізнаним народу Aen Elle. Геральт мав честь познайомитися з ним багато років тому. В першу ж зустріч Аваллакх виявив досить сильний, часом зайвий інтерес до Старшій Крові і її носію - Цири. Справжні причини такого цікавості були не ясні, а ельф не потрудився пояснити їх Геральту. Відьмак не мав уявлення про те, що тепер повязує ельфа і Цири. Без сумніву, Аваллакх допомагав їй, незліченну кількість разів, рятував її від Дикої Полювання … але чому?На жаль, ці болісні для Геральта питання залишалися без відповіді, а ельфскій Знаючий як і раніше залишався на найтоншої межі між життям і смертю. І все ж він знайшов сили, щоб розповісти головне - де знаходиться Цири.
    </string>
    <string name="person2">Весемір - майстер фехтування з глибокими знаннями в монстрологіі, найстаріший з ведьмаков, батько і наставник для своїх учнів і один з лідерів Школи Вовка.

Весемір - найстаріший відьмак, який весь час перебував в Каер Морхене, навчаючи молодих юнаків фехтування та висвітлюючи секрети боротьби з монстрами, чудовиськами і іншою нечистю (монстрологія). Він побував у всіх князівствах і королівствах за своє довге життя. Відносно віку, ніхто точно не знає, скільки старому відьмак років.

Весемір - найстарший і досвідчений відьмак; можливо він навіть старше, ніж сама Каер Морхен. Зими він проводить в фортеці, а навесні знову виходить на дорогу, так само, як і всі інші. Незважаючи на вік, він дуже міцний і енергійний. Багато молодих можуть позаздрити його здоровю.
    </string>
    <string name="person3">Геральт головний герой літературної саги і протагоніст наступних ігор, відьмак, професійний мисливець на монстрів, один з кращих фехтувальників Півночі.
    Геральт володіє вельми примітним, хоча і на рідкість нестерпним характером. Роки, проведені на битому шляху серед різного роду і ступеня маргінальних особистостей, поневіряння по всьому світу, незліченна кількість сутичок і колотнеч виробили в Геральт ряд якостей, які протягом його пригод дозволяли йому виживати і виходити відносним переможцем з будь-якої ситуації.



    </string>
    <string name="person4">Ім\я короля Дикої Полювання, особистість повелителя кошмарів, особа під страшною маскою - все це довгий час залишалося невідомим. Згодом же крупиці відомостей поступово склалися в цілісне зображення нашого ворога, але від цього вселяється їм жах не став менше.

Дика Полювання насправді виявилася елітним загоном кінноти зі світу Aen Elle, народу вільха, під командуванням честолюбного і безжального короля по імені Ередін Бреакк Глас. Він подорожував таємними стежками крізь крижану порожнечу між світами, викрадав і перетворював на рабів людей нашого світу. Тепер же він полював за Ціріллой, чию силу бажав використовувати в своїх цілях. І єдиною перешкодою на його шляху опинився Геральт з Рівії.</string>
    <string name="person5">Любисток (пол. Jaskier) — герой літературної Саги, написаної Анджеєм Сапковським і її адаптацій, в тому числі відеоігор Відьмак, Відьмак 2: Вбивці Королів і Відьмак 3: Дикий Гін.

Юліан Альфред Панкрац віконт де Леттенхоф, відомий як Любисток (в інших перекладах на українську — Жовтець чи Яскір) — кращий друг і незмінний супутник Ґеральта, трубадур і бабій. Автор збірок поетичних творів «Негаразди Кохання» і «Час Місяця», а також мемуарів «Півстоліття поезії». У грі «Відьмак» Любистку приписується авторство ще однієї книги — «Балади».
    </string>
    <string name="person6">Йенніфер, Йенна або просто Йен (як її називає Геральт) - маг вищого рівня, член Ради і розкішна жінка, яка зуміла підкорити серце відьмака.
    Йенніфер народилася в Венгерберге, столиці королівства Аедірн, в Беллетейн 1173 року (за літочисленням саги).

Йенніфер від народження горбата, і її батьки віддають дівчинку для виховання і навчання магії в школу чарівниць в Аретузи, так як через каліцтва не бачать перспективи видати її заміж. Чародійка Тіссен де Вріє після спроби суїциду Йенніфер бере її в учениці. В ході навчання в школі Йенніфер виправляють дефекти зовнішності, бо того вимагає престиж професії.

У книзі згадується, що її подружкою по школі була Сабріна Глевіссіг.

Ставши чарівницею, Йенніфер відкриває в своєму будинку в Венгерберге приватну практику, в тому числі надаючи медичну допомогу жінкам в лікуванні безпліддя або допомагаючи їм перервати небажану вагітність.

Йенніфер, як і більшість чародійок, не могла мати дітей. Бажаючи завести дитину за всяку ціну, вона намагається використовувати можливості звільненого Жовтцем джина, а згодом бере участь в безуспішною полюванні на золотого дракона.
    </string>
    <string name="person7">
Вперше Геральт дізнається про Ціраночке від різних подруг Лютик. За їх словами, бард дуже багато часу проводив з Присциллой, часто гуляв, але всім їм говорив, що це кузина з Ковіра.

Сама поетеса їздила по півночі з турне від Лан Ексетера і Понт Ваніс через Третогор і Каельф до Новограда. Особисто відьмак познайомився з нею в корчмі «Зимородок» після її виступу. Завдяки її допомоги, Білий Вовк зміг вийти на слід свого друга, який кудись пропав.
    Прісцилла стала автором п\єси, зміст і жанр вибираються гравцем, за допомогою якої героям вдалося привернути увагу свого друга, допплеру Дуду Бібервельта. Після того, як Лютик був вирваний з лап храмової варти, бард щосили готувався до відкриття свого кабаре. Заклад він хотів піднести як подарунок Прісциллі.
На жаль, незадовго до відкриття на поетесу нападає вбивця, і спотворює її. Сильні пошкодження отримали очі і горло, що найстрашніший кошмар для барда. Від болісної смерті Прісциллу врятувало те, що нападник випадково перекинув жаровню. Хтось почув шум і покликав варту. Вбивці довелося спішно ретируватися, не довівши розпочатого до кінця. Геральт може взятися за розкриття замаху, за вибором гравця.

Зі свого розслідування відьмак дізнається, що свої каліцтва Прісцилла отримала за те, що готувала п\єсу, в якій висміюється Культ Вічного Вогню. Нападником виявився фанатично релігійний вампір, який переховувався під виглядом міського коронера. Після замаху, голос Прісцилли почав потроху повертатися. І хоча він став трішки грубіше, жовтець це навіть подобалося. За його словами, він планує спільні виступи з Присциллой, де вона буде грати на лютні, а він співати. До кінця гри, Ціраночка почала одужувати, але душевна травма залишиться у неї надовго.
  </string>
    <string name="person8">
Трисс Мерігольд ( «Чотирнадцята з пагорба») - учасниця ложі чародійок, радниця при дворі короля Фольтеста, коханка Геральта і просто карколомна жінка.
    Народилася талановита чарівниця в 1253 році в родині шевця. Родом вона з славного града Марібор. Багатодітна сім]я жила дуже бідно, грошей ледь вистачало хоча б на якусь їжу. Стан справ погіршився після смерті батька (за іншою версією він почав пиячити і забув про сім\ю). Трисс разом з трьома братами і двома сестрами жебракували, намагалися схопити хоч якийсь брудний шматок черствого хліба.

Мати нарешті вирішується і робить вельми важкий для себе крок - вона віддає маленьку Трисс місцевої чарівниці. За чет неабияких здібностей Трисс досить швидко навчається. Незабаром вона опановує магією досконало.
        У свої двадцять років вона потрапляє до ради Фольтеста, а після вже і до вищого магічне суспільство. Саме тут відбувається її знайомство з Йенніфер, з якої в подальшому Трисс зв\яжуть дружні узи. Саме завдяки цій магічке Трисс зустрічається з Геральт і всіма подальшими.

Варто згадати, що Трисс брала участь в битві на Содденском Пагорбі проти Нільфгаарда. Але через брак досвіду і не загартованості характеру її охопив жах, вона піддалася паніці і втратила свідомість. Довгий час вона вважалася загиблою, хоча насправді була на реабілітації після важкого поранення. Переступити через свій страх її вдалося лише після погрому в Рівії.
    </string>
    <string name="person9">
Цірілла Фіона Елен Рианнон, Левеня з Цинтра (Фалька), Цири - дитя Старшій Крові, чародійка, спадкова принцеса Цинтра.
        У травні 1253 року біля юної принцеси Цинтра і її чоловіка герцога Дані народжується дитина-несподіванка, дитина-Призначення, маленька Цірілла. Вона відрізнялася своєю життєрадісністю, надмірною активністю і цікавістю. Велику частину часу маленька бунтарка проводила в компанії хлопчаків. Вона дуже швидко дорослішала.

Батько дівчинки давним-давно пообіцяв Геральту дати йому те, що він забажає. Саме дівчинка стала Призначенням відьмака.
    </string>
    <string name="monster1">
З великої жалістю повідомляю, що син Вашої княжої милості натрапив під час полювання на біса. Він загинув на місці разом зі слугою, провідником, дружиною і селянами, які йшли в облаві з собаками.
- Кавин Йеллен, керуючий маєтком Віплепін під Визимі

Біси - це ходяча гора мязів, увінчана рогатою головою з пащею, повною гострих зубів. Як і його більш рідкісний родич, бука, біс живе в густих хащах, в трясовині і на болотах. Коли це можливо, він уникає людей. Але якщо цього не вдається, то вбиває їх без жодних зусиль.</string>
    <string name="monster2">Допплер, відомі також як векслінгі або подвойнякі, це істоти, здатні прийняти форму будь-якого гуманоїда або звіра. Ця трансформація ілюзія, яку можна було б розвіяти простим заклинанням, але справжня, повна метаморфоза. Це означає, що ніякі захисні амулети або Відьмачий медальйони не повідомили про присутність доплера: він випромінює ту ж ауру, що і істота, в яке він звернувся. Це в поєднанні з неймовірним інтелектом і винахідливістю могло б зробити з Допплер ідеальних найманих вбивць або злодіїв, однак по природного доброті і боязкості вони прагнуть уникати кровопролиття за всяку ціну.</string>
    <string name="monster3">Віверни часто плутають з драконом, і хоча вона значно дрібніші за своїх знаменитих родичів і не пашить вогнем, вона і без того чудовисько досить грізне. Особливо поганою славою користуються так звані королівські віверни, які, подібно до монархам, надзвичайно войовничі і смертельно небезпечні.</string>
    <string name="monster4">Лісовик - страж лісу. Це втілення якоїсь сили лісу, яка покликана захищати його жителів від згубного втручання і дії людей.

Раніше, коли люди шанували силу природи, лешак (як ще називають лісовиків) зустрічалися досить часто. Після знецінення сили і таїнств самого лісу і розселення людей, вирубці дерев, полювання на тварин лісовики стали рідкісним явищем, але зустріч з ними є смертельною і останнім жахливим подивом подорожнього перед смертю.

Самі по собі лісовики не нападають на людей без явного на те приводу. Ці варти харчуються лісовими тваринами, лікують інших лісових сутностей, закликають воронів для захисту своєї території. Але якщо подорожній несе загрозу і шкода, то лешак неодмінно пробє голову осквернителя своїм величезним костистим кулаком. Атаки лісовика повільні, але несуть в собі нищівну силу. Після себе вони не залишають ніяких залишків від жертви.
    </string>
</resources>